--- a/shoppinglist/templates/shoppinglist/base.html
+++ b/shoppinglist/templates/shoppinglist/base.html
@@ -4,7 +4,9 @@
 <html class="h-100">
 
 <head>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
                     <!--         GOOGLE FONTS LINKS     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,21 +19,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
                     <!--         BOOTSTRAP LINK      -->
-                    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    
 
                     <!--         CUSTOM CSS STYLING LINK    -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-    </script> -->
-    <!--  -->
 
 </head>
 
@@ -40,8 +32,6 @@
    <!-- Navigation -->
     <!--  This will appear on all pages -->
 
-<!-- <div class="container">
-    <div class="row">  -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/"><span class="brand">
                 Sh<span class="red-o">o</span>ppingList<span class="thin">|Planner
@@ -52,8 +42,8 @@
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button> 
-            <div class="collapse navbar-collapse" id="navbarText">  <!-- main-navigation --> 
-                <ul class="navbar-nav">  <!-- me-auto mb-2 mb-lg-0 -->
+            <div class="collapse navbar-collapse" id="navbarText">   
+                <ul class="navbar-nav">  
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
@@ -80,8 +70,6 @@
                 </span>
             </div>
         </nav>
-    <!-- </div>
-</div> -->
 
 <div class="container">
     <div class="row">
@@ -101,7 +89,6 @@
     {% endblock content %}
 </main>
 
-<!-- Made by Christiana Temiola -->
 <!-- Footer -->
 <footer class="footer mt-auto py-3 dark-bg navbar-dark bg-dark">
     <p class="m-0 text-center text-white footer-weight">
