--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,14 +103,14 @@
 }
 
 /* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) { 
-  p {font-size:2.5rem;} /*1rem = 16px*/
-}
+/* @media (min-width: 992px) { 
+  p {font-size:2.5rem;} /*1rem = 16px
+} */
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {  
-  p {font-size:3rem;} /*1rem = 16px*/    
-}
+/* @media (min-width: 1200px) {  
+  p {font-size:3rem;} /*1rem = 16px    
+} */
 
 
 
