Remove custom font size media queries applied the paragraph element

--- a/shoppinglist/templates/shoppinglist/shoppinglist.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglist.html
@@ -50,27 +50,27 @@
                 </div>
             
             {% else %}
-                <div class="col-sm-12 col-md-2 col-lg-2">
+                <div class="col-sm-12 col-lg-2">
                     <!-- <h6>Item Name</h6> -->
                     <p>{{ shoppinglistitem.item_name }}</p> 
                 </div>
-                <div class="col-sm-12 col-md-1 col-lg-1">
+                <div class="col-sm-12 col-lg-1">
                     <!-- <h6>Quantity</h6> -->
                     <p>{{ shoppinglistitem.quantity }}</p> 
                 </div>
-                <div class="col-sm-12 col-md-1 col-lg-1">
+                <div class="col-sm-12 col-lg-1">
                     <!-- <h6>Unit Price</h6> -->
                     <p>{{ shoppinglistitem.unit_price }}</p>
                 </div>
-                <div class="col-sm-12 col-md-1 col-lg-1">
+                <div class="col-sm-12 col-lg-1">
                     <!-- <h6>Total Price</h6> -->
                     <p>{{ shoppinglistitem.total_price }}</p>
                 </div>
-                <div class="col-sm-12 col-md-2 col-lg-2">
+                <div class="col-sm-12 col-lg-2">
                     <!-- <h6>Date Created</h6> -->
                     <p>{{ shoppinglistitem.date_created }}</p> 
                 </div>
-                <div class="col-sm-12 col-md-2 col-lg-2">
+                <div class="col-sm-12 col-lg-2">
                     <!-- <h6>Date Updated</h6> -->
                     <p>{{ shoppinglistitem.date_updated }}</p> 
                 </div>
