--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@
     /* bootstrap set the font-family & size to 1rem 
     & I'm not able to override them with my own css */
     font-family: 'Lato', sans-serif;
-    font-size: 2rem;
+    /* font-size: 2rem; */
     /* background: #f7f7f4; */
   }
 
@@ -89,7 +89,7 @@
   /********************************************************/
 
   @media (min-width: 230px) {  
-    h2 {font-size:1rem;} 
+    h2 {font-size:1.5rem;} 
   }
 
 /* Small devices (landscape phones, 544px and up) */
@@ -99,7 +99,7 @@
 
 /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
 @media (min-width: 768px) {  
-  p {font-size:2rem;} 
+  p {font-size:1.5rem;} 
 }
 
 /* Large devices (desktops, 992px and up) */
