Make the login & sign up links on the home page bold and create views folder in the documentation directory for use in README

--- a/shoppinglist/templates/shoppinglist/shoppinglist.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglist.html
@@ -134,8 +134,8 @@
                     leaving you happy and fulfilled at the end. 
                 </p>
                 <p> 
-                    Please <a href="/login">log in</a> if you already have an account or 
-                    <a href="{% url 'register' %}">sign up</a> for a new account to enjoy the benefits 
+                    Please <a href="/login"><strong>login</strong></a> if you already have an account or 
+                    <a href="{% url 'register' %}"><strong>signup</strong></a> for a new account to enjoy the benefits 
                     this app has to offer.
                 </p>
             </div>
