--- a/shoppinglist/templates/shoppinglist/register.html
+++ b/shoppinglist/templates/shoppinglist/register.html
@@ -6,9 +6,9 @@
 
 <h1 class="text-center heading">Sign Up</h1>
 
-<div clss="container"> 
+<div class="container"> 
     <div class="row"> 
-        <form class="form-center" method="POST">  <!--  -->
+        <form class="form-center col" method="POST">  
             {% csrf_token %}
             {{form.as_p}}
             <!-- <input type="submit" value="Register"> -->
