--- a/shoppinglist/templates/shoppinglist/add_shopping_item.html
+++ b/shoppinglist/templates/shoppinglist/add_shopping_item.html
@@ -27,48 +27,11 @@
     </div>        
     {% endif %} <!-- authentication end if -->
 
-    <!-- <script>
-        let price = document.getElementById('id_unit_price');
-        console.log("The Price is: ", price);
-        price.addEventListener('change', function(event) {
-            let newPrice = parseFloat(price.value);
-            console.log("The New Price is: ", newPrice);
+    
+    
+{% endblock %}
 
-            let qty = document.getElementById('id_quantity');
-            console.log("The Quantity is: ", qty);
-
-            let newQty = parseInt(qty.value, 10);
-            console.log("The New Quantity is: ", newQty);
-            
-            let total = newQty * newPrice;
-            console.log("Total Price is: ", total); 
-
-            document.getElementById("id_total_price").value = total;
-            let totalPrice = document.getElementById('id_total_price');
-            console.log("The Total Price of your item is:", totalPrice);
-        });
-
-        let qty = document.getElementById('id_quantity');
-        console.log("The Quantity is: ", qty);
-        qty.addEventListener('change', function(event) {
-            let newQty = parseInt(qty.value, 10);
-            console.log("The New Quantity is: ", newQty);
-
-            let price = document.getElementById('id_unit_price');
-            console.log("The Price is: ", price);
-            
-            let newPrice = parseFloat(price.value);
-            console.log("The New Price is: ", newPrice);
-
-            let total = newQty * newPrice;
-            console.log("Total Price is: ", total);
-
-            document.getElementById("id_total_price").value = total;
-            let totalPrice = document.getElementById('id_total_price');
-            console.log("The Total Price of your item is:", totalPrice);
-        });
-    </script>   -->
-
-    <script src="{% static 'js/script.js' %}" type="text/javascript" ></script> 
-
-{% endblock %} 
+<!-- load additional javascript -->
+{% block scripts %}
+    <script src="{% static 'js/calc_total_price.js' %}"></script>
+{% endblock %}
