--- a/shoppinglist/templates/shoppinglist/edit_shopping_item.html
+++ b/shoppinglist/templates/shoppinglist/edit_shopping_item.html
@@ -1,5 +1,7 @@
 {% extends 'shoppinglist/base.html' %}
 
+{% load static %}
+
 {% block content %}
 
     <title>Edit Shopping List Item</title>
@@ -25,31 +27,11 @@
     </div>    
     {% endif %} <!-- authentication end if -->
 
-    <script>
-        let qty = document.getElementById('id_quantity');
-        //console.log("The Quantity is: ", qty);
+{% endblock %}
 
-        qty.addEventListener('change', function(event) {
-            let newQty = parseInt(qty.value, 10);
-            //console.log("The New Quantity is: ", newQty);
-
-            let price = document.getElementById('id_unit_price');
-            //console.log("The Price is: ", price);
-            //console.log("The New Price is: ", price);
-            let newPrice = parseFloat(price.value, 0.1);
-            //console.log("The New Price is: ", newPrice);
-            //let total = newQty * newPrice;
-
-            let total = newQty * newPrice;
-            //console.log("Total Price is: ", total);
-
-            document.getElementById("id_total_price").value = total;
-            let totalPrice = document.getElementById('id_total_price');
-            //totalPriceInput.value = total;
-            //console.log("The Total Price of your item is:", totalPrice);
-        });
-    </script>
-
+<!-- load additional javascript -->
+{% block scripts %}
+    <script src="{% static 'js/calc_total_price.js' %}"></script>
 {% endblock %}
 
     
